2012-08-03  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* Add cpp/src/third-party/mpfr-3.1.1:

	- The MPFR GNU library is required by CGAL so that CGAL Core can
	be compiled.

	Downloaded from

	http://www.mpfr.org/mpfr-current/#download

	* Add cpp/src/third-party/gmp-5.0.5:

	- The GNU Multiple Precision Arithmetic Library is required by
	CGAL so that CGAL Core can be compiled.

	Downloaded from

	http://gmplib.org/

2012-08-02  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* matlab/MatlabImportFilter.hxx: (v0.1.1)

	- Fix bug. Missing include of header file.

	* matlab/ItkToolbox/GerardusCommon.hpp
	* matlab/ItkToolbox/GerardusCommon.cpp
	* matlab/ItkToolbox/MatlabImageHeader.h
	* matlab/ItkToolbox/MatlabImageHeader.cxx
	* matlab/ItkToolbox/MatlabImportFilter.h
	* matlab/ItkToolbox/MatlabImportFilter.hxx
	* matlab/ItkToolbox/MatlabExportFilter.h
	* matlab/ItkToolbox/MatlabExportFilter.hxx

	- Move to matlab/, instead of having them in ItkToolbox, as they
	can be reused.

	* matlab/ItkToolbox/CMakeLists.txt: (v0.5.1)

	- Move GerardusCommon and Matlab import/export classes to matlab/,
	instead of having them in ItkToolbox, as they can be reused.

	* Add matlab/FiltersToolbox/scimat_blockproc3.m: (v0.1.0)

	- Block processing for a 3D SCI MAT volume.

	* matlab/FiltersToolbox/blockproc3.m: (v0.2.1)

	- Minor changes to help header.

	* Delete matlab/engopts.sh:

	- It's a relic, we no longer use Matlab's mex function to compile
	our mex files.

	* Add cpp/src/third-party/CGAL-4.0.2:

	- Third party library. CGAL is the Computational Geometry
	Algorithms Library. It provides meshing and triangulation
	capabilities, although at this point we just want to use it to
	query whether points are inside or outside a polyhedron.

	Downloaded from

	http://www.cgal.org/download.html

2012-07-12  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* matlab/ItkToolbox/CMakeLists.txt: (v0.5.0)
	* matlab/ItkToolbox/ItkImFilter.cpp: (v1.0.0)

	- Full rewrite of the architecture.
